# cuddly-bassoon2

./: .dockerignore  .env.railway.example  .gitignore  ADMIN_DISPUTE_LINK_ADDED.md  AMELIORATIONS_SECURITE_EMAIL_RESUME.md  ANALYSE_FORMULAIRES_AUTHENTIFICATION.md  ANALYSE_SYSTEMES_CLES.md  CHAT_BUBBLES_IMPROVED.md  CHAT_CLEAN_FINAL.md  CHAT_CORRECTIONS_FINALES.md  CHAT_ISSUES_FIXED.md  CHAT_MESSAGES_CLEANED.md  CHAT_POLLING_FIX.md  CHECK_PRODUCT_DETAIL.md  CORRECTION_CARROUSEL_DROPSHIPPING.md  CORRECTION_NOTIFICATIONS_NAVIGATEUR.md  DIAGNOSTIC_HIGHLIGHTS_SOLUTION.md  DISABLED_FEATURES.md  FEED_MANAGEMENT_DOCUMENTATION.md  GESTION_UTILISATEURS_NON_CONNECTES.md  GUIDE_ANNULATION_TRANSACTIONS_TEST.md  GUIDE_DEBUG_CHAT.md  GUIDE_TEST_CHAT_CINETPAY.md  HEBERGEURS_COMPARATIF.md  LANCEMENT_BLIZZ_SUMMARY.md  PHASE1_IMPLEMENTEE_RESUME.md  PHASE2_IMPLEMENTEE_RESUME.md  PUSHER_SETUP.md  Pipfile  Procfile  RAILWAY_SETUP.md  README.md  RESUME_ANALYSE_BLIZZ.md  SEVALLA_DEPLOYMENT_GUIDE.md  SHOPIFY_DISABLED.md  SOLUTION_CHAMPS_ENCRYPTES.md  SOLUTION_DROPSHIPPING_AMOUNT_FIX.md  SOLUTION_FINAL_LIMITS_FIX.md  SOLUTION_VRAIE_CAUSE.md  SYSTEME_PAIEMENT_CORRECTIONS.md  (+162 more)
blizzgame/: admin.py  apps.py  badge_config.py  cinetpay_utils.py  consumers.py  models.py  payment_verification.py  pusher_config.py  urls.py  views.py  webhook_handlers.py
cuddly-bassoon-01e5772621ca0d45845609b18768b12f9bb06d0d/: .env.example  .env.production.example  .gitignore  ANALYSE_ABANDON_PAIEMENT.md  ANALYSE_SYSTEMES_BLIZZ.md  ANALYSE_SYSTEME_ADMIN_BLIZZ.md  CHAT_FINAL_FIX.md  CHAT_FIXED.md  CHAT_STYLE_FIXED.md  (+70 more)
(+243 files in other folders)
